# lppi-data-hub-api

./: .dockerignore  Cargo.toml  Dockerfile  makefile  nixpacks.toml  test.js
data/: processed_2022.parquet
src/: main.rs
