[package]
name = "lppi-data-hub-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
polars = { version = "0.38.3", features = ["lazy", "parquet"] }
serde = {version = "1.0.197", features = ["derive"]}
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.26.0"
