[package]
name = "lppi-data-hub-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
polars = { version = "0.38.3", features = ["lazy", "parquet", "json", "pivot", "concat_str", "strings"] }
serde = {version = "1.0.197", features = ["derive"]}

[profile.release]
cogegen-units = 1
lto = "fat"
panic = "abort"
